k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-online-api-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shop-online-api-dev
  template:
    metadata:
      name: shop-online-api-dev-tmpl
      labels:
        app: shop-online-api-dev
    spec:
      containers:
        - name: shop-api-online
          image: mykytareva/shop-online-api:latest
          ports:
            - containerPort: 8000
