k8s/mosquitto-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
        labels:
            app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
          volumeMounts:
              - name: mosquito-config
                mountPath: /mosquitto/config
              - name: mosquitto-secret
                mountPath: /mosquitto/secret
                readOnly: true
      volumes:
        - name: mosquito-config
          configMap:
            name: mosquito-config-file
        - name: mosquitto-secret
          secret:
            secretName: mosquitto-secret-file
