k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shop-online-api-service
spec:
  type: LoadBalancer
  selector:
    app: shop-online-api-dev
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
      nodePort: 30000
